--- a/languages/en_US.po
+++ b/languages/en_US.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: gp-pro-freeform-style\n"
 "POT-Creation-Date: 2014-01-04 00:16-0500\n"
 "PO-Revision-Date: 2014-01-04 00:16-0500\n"
-"Last-Translator: Andrew Norcross <andrew@andrewnorcross.com>\n"
+"Last-Translator: Reaktiv Studios <andrew@andrewnorcross.com>\n"
 "Language-Team: \n"
 "Language: en_US\n"
 "MIME-Version: 1.0\n"
